# DataHandlingPlayground

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  cli.py  docker-compose.yaml  pyproject.toml  setup.py
.scripts/: docker_build.sh
dhp/: __init__.py  _env_setup.py  alembic.ini  celery.py
dhp/alembic/: README.md  env.py
dhp/alembic/versions/: 2022_06_08_2354-7cccd29af166_added_account_table.py  2022_06_12_1513-2926d49440b9_.py  2022_06_21_2308-48f55a36b7b1_initialize_data_data_edge_tables.py  2022_06_24_2111-5af9999ae324_initialize_data_data_edge_tables.py  2022_06_25_2044-f061e607eb84_add_time_deleted_to_data_model.py
dhp/comp_lib/: db.py  io.py
dhp/models/: __init__.py  _base.py  _data_readers.py  datamodel.py
tests/: conftest.py
tests/test_database/test_models/: test_data_model.py  test_data_model_relationships.py
