[tool.poetry]
name = "datahnadlingplayground"
version = "0.1.1"
description = ""
authors = ["Emiliano Jordan <emiliano.jordan@sureapp.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
alembic = "^1.8.0"
Flask = "^2.1.2"
pandas = "^1.4.2"
SQLAlchemy = "^1.4.37"
psycopg2-binary = "^2.9.3"
matplotlib = "^3.5.2"
scipy = "^1.8.1"
tables = "^3.7.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
